fix: fix linter errors: add aria-label to input, replace Input component with native HTML input

--- a/app/components/product-row.hbs
+++ b/app/components/product-row.hbs
@@ -2,7 +2,7 @@
   <td>{{@product.id}}</td>
   <td>{{@product.name}}</td>
   <td>
-    <select class="form-select" {{on "change" this.updateProductPosition}}>
+    <select class="form-select" aria-label="Select Position" {{on "change" this.updateProductPosition}}>
       {{#each @positions as |position|}}
         <option value="{{position.id}}" selected={{eq this.currentPositionName position.name}}>
           {{position.name}}
